# water

./: .clang-format  .gitattributes  .gitignore  .rgignore  AUTHORS.md  Cargo.toml  LICENSE  Makefile  READING.md  README.md  ROADMAP.md  book_gm.txt  build.zig  build.zig.zon  flake.nix
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  READING.md  README.md  ROADMAP.md  loc_badge.json  package.py
assets/: badge.json
benchmarks/: requirements.txt  ttest.py  water_branch-mitigation.txt  water_flat-magics.txt  water_full-inline.txt  water_no-inline.txt  water_partial-inline copy.txt  water_pawn-contiguous.txt  water_queen-branched.txt  water_slider-decoupled.txt
cactus/: main.rs
deprecated/: .rgignore  Makefile  build.zig  default.nix
deprecated/cactuscli/: .gitignore  Cargo.toml  README.md  justfile
deprecated/cactuscli/cactus-cli/: Cargo.toml  README.md  build.rs
deprecated/cactuscli/cactus-cli/src/: args.rs  helper.rs  initializer.rs  main.rs  runner.rs  utils.rs
deprecated/cactuscli/cactus-cli/src/runner/: dryrun.rs
deprecated/cactuscli/cactus-gui/: Cargo.toml  README.md
deprecated/cactuscli/cactus-gui/src/: main.rs
deprecated/cactuscli/libcactus/: Cargo.toml  README.md
deprecated/cactuscli/libcactus/src/: config_parser.rs
include/: bot.hpp  core.hpp  csvstream.hpp  launcher.hpp  pch.hpp
scripts/: cloc.py  king_generator.py  knight_generator.py  oasis_nnue.py  pawn_generator.py  pretty_print.py  release.py  slider_generators.c  sliders.py  stockfish_nnue.py  syzygy.py
src/: bot.cpp  launcher.cpp  main.cpp  (+2 more)
(+262 files in other folders)
