[workspace]
members = [
    "cactus-cli",
    "cactus-gui",
    "libcactus",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = [" SoloMazer solomazer@tuta.io "]
license = "AGPLv3+"
repository = "https://github.com/Water-Engine/cactus"

[workspace.dependencies]
libcactus = { path = "./libcactus" }
