[package]
name = "libcactus"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.227", default-features = false, features = ["derive", "std"] }
toml = { version = "0.9.7", default-features = false, features = ["parse", "serde", "std"] }
